syntax = "proto3";

package api;
option go_package="api";

//message Hello
message Hello {
    string first_name = 1;
    string last_name = 2;
}

//Hello Request
message HelloRequest {
    Hello hello = 1;
}

//Hello Request
message HelloRequestMultipleTimes {
    Hello hello = 1;
}

//Hello Response
message HelloResponse {
    string result = 1;
}

//Hello Response
message HelloResponseMultipleTimes {
    string result = 1;
}

//Create a Hello Service
service HelloService{
    // Unary
    rpc SayHelloUnary(HelloRequest) returns (HelloResponse) {};

    //Client Streaming RPC
    rpc SayHelloClientStreaming(stream HelloRequestMultipleTimes) returns (HelloResponse) {};

    //Server Streaming RPC
    rpc SayHelloServerStreaming(HelloRequest) returns (stream HelloResponseMultipleTimes) {};

    //Bidirectional Streaming RPC
    rpc SayHelloBidirectionalStreaming(stream HelloRequestMultipleTimes) returns (stream HelloResponseMultipleTimes) {};
}
